update styles to ensure visibility of «#wz-dev-tools-buttons--send-request»
Set the opacity of «#wz-dev-tools-buttons--send-request» to 1 with an important flag to ensure it remains visible in the «.wz-dev-tools» container.

--- a/plugins/main/public/styles/common.scss
+++ b/plugins/main/public/styles/common.scss
@@ -455,6 +455,10 @@ md-sidenav {
 .wz-dev-tools {
   display: flex;
   margin: 0px !important;
+
+  #wz-dev-tools-buttons--send-request {
+    opacity: 1 !important;
+  }
 }
 
 .wz-app:has(.wz-dev-tools) {
